# API-de-tarefas

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  tarefas.db
HTMLbackend/: README.md  main.py  pyproject.toml  tarefas.db
app/: main.py
